2003-12-12  MenTaLguY <mental@rydia.net>

	* doc/Makefile.am, Makefile.am, configure.in: include doc/
	  subdirectory in distribution tarballs

	* src/widgets/icon.c: final tweaks for getting icon highlights
	  right on buttons (temporary hack, hopefully)

	* src/splivarot.cpp: compilation fix

2003-12-12  bulia byak <bulia@dr.com>

	* src/svg/svg-path.c src/desktop.h src/libnr/gen_nr_config.c src/libnr/nr-object.c
	src/libnr/nr-types.h: made all floats doubles and all shorts ints in libnr; maximum
	zoom is increased to 256; SVG paths are stored with 8 digits precision (was 6)

2003-12-11  bulia byak <bulia@dr.com>

	* src/node-context.c adding node edit statusbar updates

	* src/selection.c: update statusbar only if selector is active

	* src/tools-switch.c: update statusbar when selector is activated

	* src/nodepath.c src/nodepath.h: function for node edit statusbar display; fixes for
	several tab-cycling and node-deleting bugs

	* src/sp-path.c: added description for SPPath (used in statusbar display)

	* src/draw-context.c: moved some messages from console to statusbar

	* src/view.c src/view.h: utility functions for statusbar display

	* src/text-context.c: statusbar display for unimode

2003-12-10  Ted Gould <ted@gould.cx>

	* configure.in: Changing to 0.37cvs

2003-12-10  bulia byak <bulia@dr.com>

	* src/verbs.c: SELECT_ALL is now tool-sensitive, comments

	* src/shortcuts.c: ctrl-a for the SELECT_ALL global verb; h and v for flips

	* src/interface.c: split edit menu into edit and object

	* src/node-context.c: removed ctrl-a, now taken care of by the global verb

	* src/nodepath.c: select_all silently returns if given null arg

	* doc/keyboard-shortcuts.txt: new shortcuts from wiki

2003-12-09  bulia byak <bulia@dr.com>

	* src/helper/png-write.c: fix for png comments (from sodipodi)

	* src/nodepath.c: fix for 856700, 856686; a better control point positioning for
	join_segment

	* src/shortcuts.c: fix default shortcut for star tool
